...
                android:text="@string/meetingDeets"
                android:textColor="@color/color_white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/title"
                android:textColor="@color/color_white" />

            <EditText
                android:id="@+id/editTxtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_backg"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textViewDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/description"
                android:textColor="@color/color_white" />

            <EditText
                android:id="@+id/editTxtDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_backg"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/description"
...
                    android:layout_weight="200"
                    android:text="[DATE AND TIME SELECTED]"
                    android:textColor="@color/color_white"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/btnSelectDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_1"
                    android:src="@drawable/ic_baseline_calendar_today_24"
                    android:text="@string/btnDateSelect"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/end"
                android:textColor="@color/color_white" />

            <EditText
                android:id="@+id/editTxtEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_backg"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/end_"
...
                android:gravity="start|top"
                android:hint="Location"
                android:inputType="textMultiLine"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textViewPlatform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/platform"
                android:textColor="@color/color_white" />

            <Spinner
                android:id="@+id/spinnerPlatform"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/spinner_des" />

            <TextView
                android:id="@+id/textViewOtherPlatform"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/meeting"
                android:textColor="@color/color_white" />

            <EditText
                android:id="@+id/editTxtID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_backg"
                android:ems="10"
                android:hint="@string/meeting"
                android:inputType="textPersonName"
...
                android:layout_marginTop="24dp"
                android:text="@string/passcode"
                android:textColor="@color/color_white" />


            <EditText
                android:id="@+id/editTxtPasscode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_backg"
                android:ems="10"
                android:hint="@string/passcode"
                android:inputType="textPersonName"
...
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCreateNewMeeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_1"
                    android:text="Create Meeting"
                    android:textColor="@color/color_white" />
                <Button
                    android:id="@+id/btnRequestMeeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_1"
...
