<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".fragments.MeetingsFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefreshMeetings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/meetingsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="28dp"
            android:background="@drawable/content_layout_backg"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:itemCount="2"
            tools:listitem="@layout/card_meeting" />


            <TextView
                android:id="@+id/txtEmpty_meetings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="You do not appear to have any meetings yet. Schedule one! :)"
                android:textAlignment="center"
                android:textColor="@color/color_white"
                android:textSize="25dp"
                app:layout_constraintBottom_toBottomOf="@+id/swiperefreshMeetings"
                app:layout_constraintEnd_toEndOf="@+id/swiperefreshMeetings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/swiperefreshMeetings" />


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/meeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        app:fab_addButtonColorNormal="@color/color_1"
        app:fab_addButtonColorPressed="@color/color_1"
        app:fab_labelStyle="@style/custom_fab">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddNewMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/color_1"
            android:tint="@color/color_white"
            app:fab_icon="@drawable/ic_float_plus_45"
            app:fab_size="mini"
            app:fab_title="Create A Meeting" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnRequestMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/color_1"
            app:fab_icon="@drawable/ic_baseline_new_task"
            app:fab_size="mini"
            app:fab_title="Request A Meeting" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</androidx.coordinatorlayout.widget.CoordinatorLayout>