...
        android:layout_height="wrap_content"
        android:background="@color/card_channel"
        android:padding="10dp">


        <TextView
            android:id="@+id/txtMTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textColor="@color/color_white"
            android:textSize="24sp"
            android:text="[TITLE]"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtMDesc"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:text="[DESCRIPTION] [DESCRIPTION] [DESCRIPTION] [DESCRIPTION] [DESCRIPTION] [DESCRIPTION] [DESCRIPTION] [DESCRIPTION] [DESCRIPTION] [DESCRIPTION] [DESCRIPTION] [DESCRIPTION] [DESCRIPTION] [DESCRIPTION] "
            app:layout_constraintEnd_toEndOf="parent"
...
            android:textColor="@color/color_6"
            android:text="[DATE AND TIME]"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt" />

        <TextView
            android:id="@+id/txtMLocationElsePlatform"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:gravity="right"
...
